--- a/main_denoise.ipynb
+++ b/main_denoise.ipynb
@@ -10,7 +10,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-01-15 13:11:37,365\tINFO worker.py:1810 -- Started a local Ray instance. View the dashboard at \u001b[1m\u001b[32mhttp://127.0.0.1:8266 \u001b[39m\u001b[22m\n"
+      "2025-02-07 10:52:54,860\tINFO worker.py:1810 -- Started a local Ray instance. View the dashboard at \u001b[1m\u001b[32mhttp://127.0.0.1:8265 \u001b[39m\u001b[22m\n"
      ]
     }
    ],
@@ -437,6 +437,14 @@
     "    \"n_nodes_entropy_feature\": [12, 16, 24],\n",
     "}\n",
     "\n",
+    "\"\"\"\n",
+    "THE DATA IS NOT PUBLISHED.\n",
+    "THEREFORE YOU WONT BE ABLE TO RUN THIS NOTEBOOK WITHOUT ERRORS\n",
+    "\n",
+    "USE YOUR OWN DATA TO TRAIN!\n",
+    "\n",
+    "\"\"\"\n",
+    "\n",
     "config = {}\n",
     "dpath = \"/home/derwer/Desktop/PHD/deep_entropy_2/data_preparation/merged_data/\"\n",
     "config[\"data_csv_train\"] = dpath + \"vis_test_alk_deduped.csv\"\n",
@@ -569,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "e15149d1-bcd8-43b1-b747-35f2f0647041",
    "metadata": {},
    "outputs": [
@@ -621,7 +629,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_28194/3810325300.py:46: RankWarning: Polyfit may be poorly conditioned\n",
+      "/tmp/ipykernel_7302/3810325300.py:46: RankWarning: Polyfit may be poorly conditioned\n",
       "  z = np.polyfit(resd_entropy, log_vis_star.detach().numpy(), deg)\n"
      ]
     },
@@ -646,7 +654,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_28194/3810325300.py:46: RankWarning: Polyfit may be poorly conditioned\n",
+      "/tmp/ipykernel_7302/3810325300.py:46: RankWarning: Polyfit may be poorly conditioned\n",
       "  z = np.polyfit(resd_entropy, log_vis_star.detach().numpy(), deg)\n"
      ]
     },
@@ -671,7 +679,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_28194/3810325300.py:46: RankWarning: Polyfit may be poorly conditioned\n",
+      "/tmp/ipykernel_7302/3810325300.py:46: RankWarning: Polyfit may be poorly conditioned\n",
       "  z = np.polyfit(resd_entropy, log_vis_star.detach().numpy(), deg)\n"
      ]
     },
@@ -696,7 +704,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_28194/3810325300.py:46: RankWarning: Polyfit may be poorly conditioned\n",
+      "/tmp/ipykernel_7302/3810325300.py:46: RankWarning: Polyfit may be poorly conditioned\n",
       "  z = np.polyfit(resd_entropy, log_vis_star.detach().numpy(), deg)\n"
      ]
     },
@@ -721,7 +729,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_28194/3810325300.py:46: RankWarning: Polyfit may be poorly conditioned\n",
+      "/tmp/ipykernel_7302/3810325300.py:46: RankWarning: Polyfit may be poorly conditioned\n",
       "  z = np.polyfit(resd_entropy, log_vis_star.detach().numpy(), deg)\n"
      ]
     },
@@ -746,7 +754,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_28194/3810325300.py:46: RankWarning: Polyfit may be poorly conditioned\n",
+      "/tmp/ipykernel_7302/3810325300.py:46: RankWarning: Polyfit may be poorly conditioned\n",
       "  z = np.polyfit(resd_entropy, log_vis_star.detach().numpy(), deg)\n"
      ]
     },
@@ -771,7 +779,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_28194/3810325300.py:46: RankWarning: Polyfit may be poorly conditioned\n",
+      "/tmp/ipykernel_7302/3810325300.py:46: RankWarning: Polyfit may be poorly conditioned\n",
       "  z = np.polyfit(resd_entropy, log_vis_star.detach().numpy(), deg)\n"
      ]
     },
@@ -796,7 +804,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_28194/3810325300.py:46: RankWarning: Polyfit may be poorly conditioned\n",
+      "/tmp/ipykernel_7302/3810325300.py:46: RankWarning: Polyfit may be poorly conditioned\n",
       "  z = np.polyfit(resd_entropy, log_vis_star.detach().numpy(), deg)\n"
      ]
     },
@@ -821,7 +829,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_28194/3810325300.py:46: RankWarning: Polyfit may be poorly conditioned\n",
+      "/tmp/ipykernel_7302/3810325300.py:46: RankWarning: Polyfit may be poorly conditioned\n",
       "  z = np.polyfit(resd_entropy, log_vis_star.detach().numpy(), deg)\n"
      ]
     },
@@ -846,7 +854,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_28194/3810325300.py:46: RankWarning: Polyfit may be poorly conditioned\n",
+      "/tmp/ipykernel_7302/3810325300.py:46: RankWarning: Polyfit may be poorly conditioned\n",
       "  z = np.polyfit(resd_entropy, log_vis_star.detach().numpy(), deg)\n"
      ]
     },
@@ -871,7 +879,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_28194/3810325300.py:46: RankWarning: Polyfit may be poorly conditioned\n",
+      "/tmp/ipykernel_7302/3810325300.py:46: RankWarning: Polyfit may be poorly conditioned\n",
       "  z = np.polyfit(resd_entropy, log_vis_star.detach().numpy(), deg)\n"
      ]
     },
@@ -896,7 +904,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_28194/3810325300.py:46: RankWarning: Polyfit may be poorly conditioned\n",
+      "/tmp/ipykernel_7302/3810325300.py:46: RankWarning: Polyfit may be poorly conditioned\n",
       "  z = np.polyfit(resd_entropy, log_vis_star.detach().numpy(), deg)\n"
      ]
     },
@@ -921,7 +929,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_28194/3810325300.py:46: RankWarning: Polyfit may be poorly conditioned\n",
+      "/tmp/ipykernel_7302/3810325300.py:46: RankWarning: Polyfit may be poorly conditioned\n",
       "  z = np.polyfit(resd_entropy, log_vis_star.detach().numpy(), deg)\n"
      ]
     },
@@ -946,7 +954,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_28194/3810325300.py:46: RankWarning: Polyfit may be poorly conditioned\n",
+      "/tmp/ipykernel_7302/3810325300.py:46: RankWarning: Polyfit may be poorly conditioned\n",
       "  z = np.polyfit(resd_entropy, log_vis_star.detach().numpy(), deg)\n"
      ]
     },
@@ -971,7 +979,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_28194/3810325300.py:46: RankWarning: Polyfit may be poorly conditioned\n",
+      "/tmp/ipykernel_7302/3810325300.py:46: RankWarning: Polyfit may be poorly conditioned\n",
       "  z = np.polyfit(resd_entropy, log_vis_star.detach().numpy(), deg)\n"
      ]
     },
@@ -996,7 +1004,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_28194/3810325300.py:46: RankWarning: Polyfit may be poorly conditioned\n",
+      "/tmp/ipykernel_7302/3810325300.py:46: RankWarning: Polyfit may be poorly conditioned\n",
       "  z = np.polyfit(resd_entropy, log_vis_star.detach().numpy(), deg)\n"
      ]
     },
@@ -1145,7 +1153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "d7e17286-66a7-4ab9-a8c6-c1e242cab6e3",
    "metadata": {},
    "outputs": [
@@ -1199,11 +1207,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_28194/2470264070.py:56: RankWarning: Polyfit may be poorly conditioned\n",
+      "/tmp/ipykernel_7302/2470264070.py:56: RankWarning: Polyfit may be poorly conditioned\n",
       "  z = np.polyfit(resd_entropy, log_vis_star.detach().numpy(), deg)\n",
-      "/tmp/ipykernel_28194/2470264070.py:56: RankWarning: Polyfit may be poorly conditioned\n",
+      "/tmp/ipykernel_7302/2470264070.py:56: RankWarning: Polyfit may be poorly conditioned\n",
       "  z = np.polyfit(resd_entropy, log_vis_star.detach().numpy(), deg)\n",
-      "/tmp/ipykernel_28194/2470264070.py:56: RankWarning: Polyfit may be poorly conditioned\n",
+      "/tmp/ipykernel_7302/2470264070.py:56: RankWarning: Polyfit may be poorly conditioned\n",
       "  z = np.polyfit(resd_entropy, log_vis_star.detach().numpy(), deg)\n"
      ]
     },
@@ -1360,7 +1368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "553e1fc7-f8b2-430d-9b7a-4575862bd3a9",
    "metadata": {},
    "outputs": [
@@ -1412,7 +1420,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_28194/3810885440.py:54: RankWarning: Polyfit may be poorly conditioned\n",
+      "/tmp/ipykernel_7302/3810885440.py:54: RankWarning: Polyfit may be poorly conditioned\n",
       "  z = np.polyfit(resd_entropy, log_vis_star.detach().numpy(), deg)\n"
      ]
     },
@@ -1584,7 +1592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "fd9850e9-0250-4b7e-9cbc-94a33d773d6d",
    "metadata": {},
    "outputs": [
@@ -1629,7 +1637,51 @@
       "linear io 48 48\n",
       "relu\n",
       "linear io 48 13\n",
-      "xxx torch.Size([350, 9])\n",
+      "xxx torch.Size([350, 9])\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_7302/1210114449.py:52: RankWarning: Polyfit may be poorly conditioned\n",
+      "  z = np.polyfit(resd_entropy, log_vis_star.detach().numpy(), deg)\n",
+      "/tmp/ipykernel_7302/1210114449.py:52: RankWarning: Polyfit may be poorly conditioned\n",
+      "  z = np.polyfit(resd_entropy, log_vis_star.detach().numpy(), deg)\n",
+      "/tmp/ipykernel_7302/1210114449.py:52: RankWarning: Polyfit may be poorly conditioned\n",
+      "  z = np.polyfit(resd_entropy, log_vis_star.detach().numpy(), deg)\n",
+      "/tmp/ipykernel_7302/1210114449.py:52: RankWarning: Polyfit may be poorly conditioned\n",
+      "  z = np.polyfit(resd_entropy, log_vis_star.detach().numpy(), deg)\n",
+      "/tmp/ipykernel_7302/1210114449.py:52: RankWarning: Polyfit may be poorly conditioned\n",
+      "  z = np.polyfit(resd_entropy, log_vis_star.detach().numpy(), deg)\n",
+      "/tmp/ipykernel_7302/1210114449.py:52: RankWarning: Polyfit may be poorly conditioned\n",
+      "  z = np.polyfit(resd_entropy, log_vis_star.detach().numpy(), deg)\n",
+      "/tmp/ipykernel_7302/1210114449.py:52: RankWarning: Polyfit may be poorly conditioned\n",
+      "  z = np.polyfit(resd_entropy, log_vis_star.detach().numpy(), deg)\n",
+      "/tmp/ipykernel_7302/1210114449.py:52: RankWarning: Polyfit may be poorly conditioned\n",
+      "  z = np.polyfit(resd_entropy, log_vis_star.detach().numpy(), deg)\n",
+      "/tmp/ipykernel_7302/1210114449.py:52: RankWarning: Polyfit may be poorly conditioned\n",
+      "  z = np.polyfit(resd_entropy, log_vis_star.detach().numpy(), deg)\n",
+      "/tmp/ipykernel_7302/1210114449.py:52: RankWarning: Polyfit may be poorly conditioned\n",
+      "  z = np.polyfit(resd_entropy, log_vis_star.detach().numpy(), deg)\n",
+      "/tmp/ipykernel_7302/1210114449.py:52: RankWarning: Polyfit may be poorly conditioned\n",
+      "  z = np.polyfit(resd_entropy, log_vis_star.detach().numpy(), deg)\n",
+      "/tmp/ipykernel_7302/1210114449.py:52: RankWarning: Polyfit may be poorly conditioned\n",
+      "  z = np.polyfit(resd_entropy, log_vis_star.detach().numpy(), deg)\n",
+      "/tmp/ipykernel_7302/1210114449.py:52: RankWarning: Polyfit may be poorly conditioned\n",
+      "  z = np.polyfit(resd_entropy, log_vis_star.detach().numpy(), deg)\n",
+      "/tmp/ipykernel_7302/1210114449.py:52: RankWarning: Polyfit may be poorly conditioned\n",
+      "  z = np.polyfit(resd_entropy, log_vis_star.detach().numpy(), deg)\n",
+      "/tmp/ipykernel_7302/1210114449.py:52: RankWarning: Polyfit may be poorly conditioned\n",
+      "  z = np.polyfit(resd_entropy, log_vis_star.detach().numpy(), deg)\n",
+      "/tmp/ipykernel_7302/1210114449.py:52: RankWarning: Polyfit may be poorly conditioned\n",
+      "  z = np.polyfit(resd_entropy, log_vis_star.detach().numpy(), deg)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "xxx torch.Size([346, 9])\n",
       "xxx torch.Size([487, 9])\n",
       "xxx torch.Size([392, 9])\n",
@@ -1645,44 +1697,6 @@
       "xxx torch.Size([1021, 9])\n",
       "xxx torch.Size([1227, 9])\n",
       "xxx torch.Size([508, 9])\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_28194/1210114449.py:52: RankWarning: Polyfit may be poorly conditioned\n",
-      "  z = np.polyfit(resd_entropy, log_vis_star.detach().numpy(), deg)\n",
-      "/tmp/ipykernel_28194/1210114449.py:52: RankWarning: Polyfit may be poorly conditioned\n",
-      "  z = np.polyfit(resd_entropy, log_vis_star.detach().numpy(), deg)\n",
-      "/tmp/ipykernel_28194/1210114449.py:52: RankWarning: Polyfit may be poorly conditioned\n",
-      "  z = np.polyfit(resd_entropy, log_vis_star.detach().numpy(), deg)\n",
-      "/tmp/ipykernel_28194/1210114449.py:52: RankWarning: Polyfit may be poorly conditioned\n",
-      "  z = np.polyfit(resd_entropy, log_vis_star.detach().numpy(), deg)\n",
-      "/tmp/ipykernel_28194/1210114449.py:52: RankWarning: Polyfit may be poorly conditioned\n",
-      "  z = np.polyfit(resd_entropy, log_vis_star.detach().numpy(), deg)\n",
-      "/tmp/ipykernel_28194/1210114449.py:52: RankWarning: Polyfit may be poorly conditioned\n",
-      "  z = np.polyfit(resd_entropy, log_vis_star.detach().numpy(), deg)\n",
-      "/tmp/ipykernel_28194/1210114449.py:52: RankWarning: Polyfit may be poorly conditioned\n",
-      "  z = np.polyfit(resd_entropy, log_vis_star.detach().numpy(), deg)\n",
-      "/tmp/ipykernel_28194/1210114449.py:52: RankWarning: Polyfit may be poorly conditioned\n",
-      "  z = np.polyfit(resd_entropy, log_vis_star.detach().numpy(), deg)\n",
-      "/tmp/ipykernel_28194/1210114449.py:52: RankWarning: Polyfit may be poorly conditioned\n",
-      "  z = np.polyfit(resd_entropy, log_vis_star.detach().numpy(), deg)\n",
-      "/tmp/ipykernel_28194/1210114449.py:52: RankWarning: Polyfit may be poorly conditioned\n",
-      "  z = np.polyfit(resd_entropy, log_vis_star.detach().numpy(), deg)\n",
-      "/tmp/ipykernel_28194/1210114449.py:52: RankWarning: Polyfit may be poorly conditioned\n",
-      "  z = np.polyfit(resd_entropy, log_vis_star.detach().numpy(), deg)\n",
-      "/tmp/ipykernel_28194/1210114449.py:52: RankWarning: Polyfit may be poorly conditioned\n",
-      "  z = np.polyfit(resd_entropy, log_vis_star.detach().numpy(), deg)\n",
-      "/tmp/ipykernel_28194/1210114449.py:52: RankWarning: Polyfit may be poorly conditioned\n",
-      "  z = np.polyfit(resd_entropy, log_vis_star.detach().numpy(), deg)\n",
-      "/tmp/ipykernel_28194/1210114449.py:52: RankWarning: Polyfit may be poorly conditioned\n",
-      "  z = np.polyfit(resd_entropy, log_vis_star.detach().numpy(), deg)\n",
-      "/tmp/ipykernel_28194/1210114449.py:52: RankWarning: Polyfit may be poorly conditioned\n",
-      "  z = np.polyfit(resd_entropy, log_vis_star.detach().numpy(), deg)\n",
-      "/tmp/ipykernel_28194/1210114449.py:52: RankWarning: Polyfit may be poorly conditioned\n",
-      "  z = np.polyfit(resd_entropy, log_vis_star.detach().numpy(), deg)\n"
      ]
     },
     {
